Fix clipping when truncating text with ellipsis

--- a/styles/style.css
+++ b/styles/style.css
@@ -336,6 +336,7 @@ a {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
+  padding-bottom: 0.1rem;
 }
 
 .announcements-container > ul > li > span:first-of-type {
